force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/GridWiz_Unlimit__GridConfiguration__c.object-meta.xml
<CustomObject>
    <label>GridConfiguration</label>
    <nameField>
        <displayFormat>GC-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GridConfigurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>