force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/fields/GridWiz_Unlimit__ColumnNo__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__ColumnNo__c</fullName>
    <label>ColumnNo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>