force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/fields/GridWiz_Unlimit__CSSClass__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__CSSClass__c</fullName>
    <label>CSSClass</label>
    <type>TextArea</type>
</CustomField>