force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/fields/GridWiz_Unlimit__DataType__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__DataType__c</fullName>
    <label>DataType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>