force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/fields/GridWiz_Unlimit__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__FieldLabel__c</fullName>
    <label>FieldLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>