force-app/main/default/objects/GridWiz_Unlimit__GridConfiguration__c/fields/GridWiz_Unlimit__GridDefinition__c.field-meta.xml
<CustomField>
    <fullName>GridWiz_Unlimit__GridDefinition__c</fullName>
    <label>GridDefinition</label>
    <referenceTo>GridWiz_Unlimit__GridDefinition__c</referenceTo>
    <relationshipLabel>GridConfigurations</relationshipLabel>
    <relationshipName>GridConfigurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>